--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.DashboardActivity" />
+        <activity android:name=".activity.BottomNavActivity" />
 
+        <activity android:name=".MainActivity"/>
         <activity android:name=".Activity2" />
         <activity android:name=".Activity3" />
     </application>
